--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <option value="1">Grundtarif</option>
                     <option value="2">Splitting</option>
                 </select><br>
-                <p>Angabe versteuerndes Einkommen</p>
+                <p>Angabe zu versteuerndes Einkommen</p>
                 <div class="split_displayNone">
                     <p>Person1</p>
                     <div class="input-group mb-3">
