--- a/index.html
+++ b/index.html
@@ -1,91 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="assets/css/style.css" />
     <title>Einkommenssteuerrechner</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <main>
-        <h1>Einkommenssteuerrechner</h1>
+      <h1>Einkommenssteuerrechner</h1>
 
-        <fieldset>
-            <form id="myForm" action="" onsubmit="return false ">
-                <p>Jahr</p>
-                <select class="form-select" aria-label="Default select example">
-                    <option selected>2022</option>
-                    <option value="1">2021</option>
-                    <option value="2">2020</option>
-                    <option value="3">2019</option>
-                </select>
-                <br>
-                <p>Berechnung nach Grundtarif oder Ehegatten-/Lebenspartnersplitting</p><select class="form-select"
-                    id="basis_c" onchange="basis()">
-                    <option selected>Berechnungsgrundlage wählen</option>
-                    <option value="1">Grundtarif</option>
-                    <option value="2">Splitting</option>
-                </select><br>
-                <p>Angabe zu versteuerndes Einkommen</p>
-                <div class="split_displayNone">
-                    <p>Person1</p>
-                    <div class="input-group mb-3">
-                        <span class="input-group-text">€</span>
-                        <input type="text" class="form-control" id="input_p1">
-                        <span class="input-group-text">.00</span>
-                    </div>
-                    <p>Person2</p>
-                    <div class="input-group mb-3">
-                        <span class="input-group-text">€</span>
-                        <input type="text" class="form-control" id="input_p2">
-                        <span class="input-group-text">.00</span>
-                    </div>
+      <fieldset>
+        <form id="myForm" action="" onsubmit="return false ">
+          <p>Jahr</p>
+          <select class="form-select" aria-label="Default select example">
+            <option selected>2022</option>
+            <option value="1">2021</option>
+            <option value="2">2020</option>
+            <option value="3">2019</option>
+          </select>
+          <br />
+          <p>
+            Berechnung nach Grundtarif oder Ehegatten-/Lebenspartnersplitting
+          </p>
+          <select class="form-select" id="basis_c" onchange="basis()">
+            <option selected>Berechnungsgrundlage wählen</option>
+            <option value="1">Grundtarif</option>
+            <option value="2">Splitting</option></select
+          ><br />
 
-                </div>
+          <p>Angabe zu versteuerndes Einkommen</p>
+          <div class="split_displayNone">
+            <p>Person1</p>
+            <div class="input-group mb-3">
+              <span class="input-group-text">€</span>
+              <input type="text" class="form-control" id="input_p1" />
+              <span class="input-group-text">.00</span>
+            </div>
+            <p>Person2</p>
+            <div class="input-group mb-3">
+              <span class="input-group-text">€</span>
+              <input type="text" class="form-control" id="input_p2" />
+              <span class="input-group-text">.00</span>
+            </div>
+          </div>
 
-                <div class="noSplit_displayNone">
-                    <p>Versteuerbares Einkommen - Einzeln veranlagt</p>
-                    <div class="input-group mb-3">
-                        <span class="input-group-text">€</span>
-                        <input type="text" class="form-control" id="input">
-                        <span class="input-group-text">.00</span>
-                    </div>
-                </div>
+          <div class="noSplit_displayNone">
+            <p>Versteuerbares Einkommen - Einzeln veranlagt</p>
+            <div class="input-group mb-3">
+              <span class="input-group-text">€</span>
+              <input type="text" class="form-control" id="input" />
+              <span class="input-group-text">.00</span>
+            </div>
+          </div>
+          <div class="invalid_number d-none">
+            <p style="color: red">
+              Bitte geben Sie einen gültigen Betrag ein bzw. wählen Sie eine
+              Berechnungsgrundlage aus!
+            </p>
 
-                <button type="button" class="btn btn-dark" id="button" onclick="calc()">Berechnen</button>
-                <p> <span id="input_sum"></span></p>
-                <div>
-                    <p>Berechnung nach <span id=output_basis></span></p>
-                </div>
+            <button
+              type="button"
+              class="btn btn-danger"
+              id="button-danger"
+              onclick="location.reload()"
+            >
+              Bitte erneut versuchen
+            </button>
+          </div>
+          <div class="correct_entry">
+            <button
+              type="button"
+              class="btn btn-dark"
+              id="button"
+              onclick="calc()"
+            >
+              Berechnen
+            </button>
+            <p><span id="input_sum"></span></p>
+            <div>
+              <p>Berechnung nach: <span id="output_basis"></span></p>
+            </div>
 
-                <div>
-                    <p>Ihre Einkommenssteuer: <span id=output_tax></span></p>
-                </div>
-
-            </form>
-        </fieldset>
-
-
-
-
-
-
-
+            <div>
+              <p>Ihre Einkommenssteuer:</p>
+              <p><span id="output_tax"></span></p>
+            </div>
+          </div>
+        </form>
+      </fieldset>
     </main>
 
-
-
-
     <script src="assets/js/main.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/97f8f2a2f5.js" crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/97f8f2a2f5.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
